
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(URLCPP)

SET(URLCPP_ROOT ${CMAKE_SOURCE_DIR}/ )

IF(NOT BIN_PATH)
    SET(BIN_PATH ${CMAKE_SOURCE_DIR}/bin)
ENDIF()

SET(EXECUTABLE_OUTPUT_PATH ${BIN_PATH} )
SET(LIBRARY_OUTPUT_PATH ${BIN_PATH})
LINK_DIRECTORIES( ${BIN_PATH} )


SET(
    URLCPP_INCLUDES 
    ${URLCPP_ROOT}/include)
    
INCLUDE_DIRECTORIES( ${URLCPP_INCLUDES} )

SET( URLCPP_LIBRARY_NAME urlcpp )

ADD_LIBRARY(
    ${URLCPP_LIBRARY_NAME}
    STATIC 
    ${URLCPP_ROOT}/src/psl.cpp
	${URLCPP_ROOT}/src/punycode.cpp
	${URLCPP_ROOT}/src/url.cpp
	${URLCPP_ROOT}/src/utf8.cpp
	)
    
TARGET_LINK_LIBRARIES(${URLCPP_LIBRARY_NAME})