CMAKE_MINIMUM_REQUIRED(VERSION 3.23)

PROJECT(URLCPP CXX)

SET(SRC_ROOT ${CMAKE_SOURCE_DIR}/src )
SET(INC_ROOT ${CMAKE_SOURCE_DIR}/include )

SET( URLCPP_LIBRARY_NAME urlcpp )

ADD_LIBRARY(
    ${URLCPP_LIBRARY_NAME}
	)

TARGET_SOURCES(${URLCPP_LIBRARY_NAME} 
	PUBLIC
		${SRC_ROOT}/psl.cpp
		${SRC_ROOT}/punycode.cpp
		${SRC_ROOT}/url.cpp
		${SRC_ROOT}/utf8.cpp
	PUBLIC 
	FILE_SET HEADERS 
		BASE_DIRS ${INC_ROOT}
		FILES
			${INC_ROOT}/psl.h
			${INC_ROOT}/punycode.h
			${INC_ROOT}/url.h
			${INC_ROOT}/utf8.h
   		)

install(TARGETS ${URLCPP_LIBRARY_NAME} 
        FILE_SET HEADERS
		)